--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
     "connect-history-api-fallback": "^1.1.0",
+    "exorcist": "^0.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-util": "^3.0.7",
     "vinyl-source-stream": "^1.1.0",
