--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/Rabrennie/ParkyParkPark#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
     "connect-history-api-fallback": "^1.1.0",
     "exorcist": "^0.4.0",
+    "gulp": "^3.9.0",
     "gulp-notify": "^2.2.0",
     "gulp-util": "^3.0.7",
     "vinyl-source-stream": "^1.1.0",
