--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.0",
     "gulp-notify": "^2.2.0",
     "gulp-util": "^3.0.7",
+    "lodash": "^3.10.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   }
