--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/Rabrennie/ParkyParkPark/issues"
   },
   "homepage": "https://github.com/Rabrennie/ParkyParkPark#readme",
+  "dependencies": {
+    "random-js": "^1.0.8"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
