--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A game",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "standard"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "lodash": "^3.10.1",
+    "standard": "^v5.4.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   }
