--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A game",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint app/**/*.js",
+    "format": "eslint --fix app/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -20,11 +22,14 @@
     "random-js": "^1.0.8"
   },
   "devDependencies": {
+    "babel-eslint": "^4.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browser-sync": "^2.10.1",
     "browserify": "^12.0.1",
     "connect-history-api-fallback": "^1.1.0",
+    "eslint": "^1.10.3",
+    "eslint-config-kellyirc": "3.1.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.0",
     "gulp-copy": "0.0.2",
