--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint app/**/*.js",
-    "format": "eslint --fix app/**/*.js"
+    "lint": "eslint app/**/*.js app/**/**/*.js",
+    "format": "eslint --fix app/**/*.js app/**/**/*.js"
   },
   "repository": {
     "type": "git",
