--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A game",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run lint",
     "lint": "eslint app/**/*.js app/**/**/*.js gulpfile.js",
     "format": "eslint --fix app/**/*.js app/**/**/*.js"
   },
