--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "npm run lint",
     "lint": "eslint app/**/*.js app/**/**/*.js gulpfile.js",
-    "format": "eslint --fix app/**/*.js app/**/**/*.js"
+    "format": "eslint --fix app/**/*.js app/**/**/*.js",
+    "electron": "gulp build && electron ."
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "del": "^2.2.0",
     "electron-packager": "^5.2.0",
+    "electron-prebuilt": "^0.36.2",
     "eslint": "^1.10.3",
     "eslint-config-kellyirc": "3.1.0",
     "exorcist": "^0.4.0",
